// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`us-feature / us-tv-onehour profiles (snapshot) > matches the pinned us-feature profile 1`] = `
{
  "elements": {
    "action": {
      "caps": false,
      "indent": 1.5,
      "spaceAfter": 0,
      "spaceBefore": 1,
      "width": 6,
    },
    "centered": {
      "align": "center",
      "caps": false,
      "indent": 1.5,
      "spaceAfter": 1,
      "spaceBefore": 1,
      "width": 6,
    },
    "character": {
      "caps": true,
      "indent": 3.7,
      "spaceAfter": 0,
      "spaceBefore": 1,
      "width": 3.3,
    },
    "dialogue": {
      "caps": false,
      "indent": 2.5,
      "spaceAfter": 0,
      "spaceBefore": 0,
      "width": 3.5,
    },
    "dual_dialogue": {
      "caps": false,
      "indent": 1.5,
      "spaceAfter": 0,
      "spaceBefore": 1,
      "width": 6,
    },
    "lyric": {
      "caps": false,
      "indent": 2.5,
      "italic": true,
      "spaceAfter": 0,
      "spaceBefore": 0,
      "width": 3.5,
    },
    "note": {
      "caps": false,
      "indent": 1.5,
      "italic": true,
      "spaceAfter": 0,
      "spaceBefore": 0,
      "width": 6,
    },
    "page_break": {
      "caps": false,
      "indent": 0,
      "spaceAfter": 0,
      "spaceBefore": 0,
      "width": 0,
    },
    "parenthetical": {
      "caps": false,
      "indent": 3.1,
      "spaceAfter": 0,
      "spaceBefore": 0,
      "width": 2,
    },
    "scene_heading": {
      "caps": true,
      "indent": 1.5,
      "spaceAfter": 1,
      "spaceBefore": 2,
      "width": 6,
    },
    "section": {
      "caps": true,
      "indent": 1.5,
      "spaceAfter": 1,
      "spaceBefore": 1,
      "width": 6,
    },
    "shot": {
      "caps": true,
      "indent": 1.5,
      "spaceAfter": 0,
      "spaceBefore": 1,
      "width": 6,
    },
    "synopsis": {
      "caps": false,
      "indent": 1.5,
      "italic": true,
      "spaceAfter": 1,
      "spaceBefore": 0,
      "width": 6,
    },
    "title_page": {
      "caps": false,
      "indent": 0,
      "spaceAfter": 0,
      "spaceBefore": 0,
      "width": 0,
    },
    "transition": {
      "align": "right",
      "caps": true,
      "indent": 6,
      "spaceAfter": 1,
      "spaceBefore": 1,
      "width": 1.5,
    },
  },
  "id": "us-feature",
  "name": "US Feature",
  "page": {
    "height": 11,
    "margins": {
      "bottom": 1,
      "left": 1.5,
      "right": 1,
      "top": 1,
    },
    "width": 8.5,
  },
  "pagination": {
    "continuedText": "(CONT'D)",
    "honorsActBreaks": false,
    "linesPerPage": 55,
    "minOrphanLines": 2,
    "moreText": "(MORE)",
    "sceneHeadingMinLinesBeforeBreak": 3,
  },
}
`;

exports[`us-feature / us-tv-onehour profiles (snapshot) > matches the pinned us-tv-onehour profile 1`] = `
{
  "elements": {
    "action": {
      "caps": false,
      "indent": 1.5,
      "spaceAfter": 0,
      "spaceBefore": 1,
      "width": 6,
    },
    "centered": {
      "align": "center",
      "caps": false,
      "indent": 1.5,
      "spaceAfter": 1,
      "spaceBefore": 1,
      "width": 6,
    },
    "character": {
      "caps": true,
      "indent": 3.7,
      "spaceAfter": 0,
      "spaceBefore": 1,
      "width": 3.3,
    },
    "dialogue": {
      "caps": false,
      "indent": 2.5,
      "spaceAfter": 0,
      "spaceBefore": 0,
      "width": 3.5,
    },
    "dual_dialogue": {
      "caps": false,
      "indent": 1.5,
      "spaceAfter": 0,
      "spaceBefore": 1,
      "width": 6,
    },
    "lyric": {
      "caps": false,
      "indent": 2.5,
      "italic": true,
      "spaceAfter": 0,
      "spaceBefore": 0,
      "width": 3.5,
    },
    "note": {
      "caps": false,
      "indent": 1.5,
      "italic": true,
      "spaceAfter": 0,
      "spaceBefore": 0,
      "width": 6,
    },
    "page_break": {
      "caps": false,
      "indent": 0,
      "spaceAfter": 0,
      "spaceBefore": 0,
      "width": 0,
    },
    "parenthetical": {
      "caps": false,
      "indent": 3.1,
      "spaceAfter": 0,
      "spaceBefore": 0,
      "width": 2,
    },
    "scene_heading": {
      "caps": true,
      "indent": 1.5,
      "spaceAfter": 1,
      "spaceBefore": 2,
      "width": 6,
    },
    "section": {
      "caps": true,
      "indent": 1.5,
      "spaceAfter": 1,
      "spaceBefore": 1,
      "width": 6,
    },
    "shot": {
      "caps": true,
      "indent": 1.5,
      "spaceAfter": 0,
      "spaceBefore": 1,
      "width": 6,
    },
    "synopsis": {
      "caps": false,
      "indent": 1.5,
      "italic": true,
      "spaceAfter": 1,
      "spaceBefore": 0,
      "width": 6,
    },
    "title_page": {
      "caps": false,
      "indent": 0,
      "spaceAfter": 0,
      "spaceBefore": 0,
      "width": 0,
    },
    "transition": {
      "align": "right",
      "caps": true,
      "indent": 6,
      "spaceAfter": 1,
      "spaceBefore": 1,
      "width": 1.5,
    },
  },
  "id": "us-tv-onehour",
  "name": "US TV One-Hour Drama",
  "page": {
    "height": 11,
    "margins": {
      "bottom": 1,
      "left": 1.5,
      "right": 1,
      "top": 1,
    },
    "width": 8.5,
  },
  "pagination": {
    "continuedText": "(CONT'D)",
    "honorsActBreaks": true,
    "linesPerPage": 55,
    "minOrphanLines": 2,
    "moreText": "(MORE)",
    "sceneHeadingMinLinesBeforeBreak": 3,
  },
}
`;
